simplified configuration of ApplicationListeners, added EquipmentGatewayPortalController with requestFirmwareUpdate API
